# Ground-station

./: CMakeLists.txt  CMakePresets.json  README.md  test_data.h  vcpkg.json
src/: ELRSMonitor.cpp  ELRSMonitor.hpp  Flight.cpp  Flight.hpp  FlightNew.hpp  FrameProcessorExample.hpp  SharedFlight.hpp  main.cpp
src/Crsf/: CrsfAttitudeFrame.cpp  CrsfAttitudeFrame.hpp  CrsfBatteryFrame.cpp  CrsfBatteryFrame.hpp  CrsfFlightModeFrame.cpp  CrsfFlightModeFrame.hpp  CrsfFrame.cpp  CrsfFrame.hpp  CrsfFrameData.hpp  CrsfFrameNew.cpp  CrsfFrameNew.hpp  CrsfLinkRXFrame.cpp  CrsfLinkRXFrame.hpp  GpsPayload.cpp  GpsPayload.hpp  Payload.hpp  PayloadData.hpp  PayloadFactory.hpp
src/ui/: Dashboard.cpp  Dashboard.hpp
tests/: readme  test.cpp
